fix: more margin between tags
Hopefully this will fix the "Too close clickable elements"

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -51,6 +51,10 @@ h1 a:hover {
   text-align: right;
 }
 
+.tag:not(:last-child) {
+  margin-right: 0.8rem;
+}
+
 .authors, .pages, .training-dates {
   text-align: center;
   padding-top: 20px;
